queue worker integeration test patched, add /transaction to swagger docs
